fix probably everything

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,13 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake")
 find_package(SDL2 REQUIRED)
 find_package(OpenGL REQUIRED)
 
-if(CMAKE_C_COMPILER_ID STREQUAL "MSVC")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT /Oy /Oi /W3 /FAcs /GF /fp:fast /wd4996 /D_CRT_SECURE_NO_DEPRECATE")
-	set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   /MT /Oy /Oi /W3 /FAcs /GF /fp:fast /wd4996 /D_CRT_SECURE_NO_DEPRECATE")
+if(CMAKE_C_COMPILER_ID STREQUAL MSVC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT /Oy /Oi /W3 /FAcs /GF /fp:fast /wd4996 /D_CRT_SECURE_NO_DEPRECATE /D_CRT_SECURE_NO_WARNINGS")
+	set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   /MT /Oy /Oi /W3 /FAcs /GF /fp:fast /wd4996 /D_CRT_SECURE_NO_DEPRECATE /D_CRT_SECURE_NO_WARNINGS")
 	add_definitions(-DHAVE_FAST_MATH)
 endif()
 
-if(CMAKE_C_COMPILER_ID STREQUAL "GNU" OR CMAKE_C_COMPILER_ID STREQUAL "Clang")
+if(CMAKE_C_COMPILER_ID STREQUAL GNU OR CMAKE_C_COMPILER_ID STREQUAL Clang)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math")
 	set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -ffast-math")
 	set(MATHLIB m)
@@ -39,7 +39,7 @@ include_directories(
 
 add_executable(${PROJ_NAME} WIN32
 	${SRC}/main.c
-	${SRC}/gl_core_3_3.c
+	${SRC}/gl_2_1.c
 )
 
 target_link_libraries(${PROJ_NAME}
